--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-spring/web": "^9.6.1",
+    "@react-three/drei": "^9.56.22",
+    "@react-three/fiber": "^8.11.0",
+    "@react-three/postprocessing": "^2.7.0",
+    "meshline": "^3.1.6",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "three": "^0.149.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@types/three": "^0.149.0",
     "typescript": "^4.7.4"
   }
 }
